--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mastodon",
+  "name": "integration_mastodon",
   "version": "0.0.1",
-  "description": "Mastodon app",
+  "description": "Mastodon integration",
   "main": "index.js",
   "directories": {
     "test": "tests"
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nextcloud/mastodon"
+    "url": "https://github.com/nextcloud/integration_mastodon"
   },
   "keywords": [
     "mastodon"
@@ -25,18 +25,18 @@
   "author": "Julien Veyssier",
   "license": "AGPL-3.0",
   "bugs": {
-    "url": "https://github.com/nextcloud/mastodon/issues"
+    "url": "https://github.com/nextcloud/integration_mastodon/issues"
   },
-  "homepage": "https://github.com/nextcloud/mastodon",
+  "homepage": "https://github.com/nextcloud/integration_mastodon",
   "browserslist": [
     "extends @nextcloud/browserslist-config"
   ],
   "dependencies": {
     "@nextcloud/router": "^1.1.0",
     "@nextcloud/auth": "^1.3.0",
-    "@nextcloud/vue": "^2.2.1",
+    "@nextcloud/vue": "^2.6.0",
     "@nextcloud/webpack-vue-config": "^1.1.0",
-    "@nextcloud/vue-dashboard": "^0.1.6",
+    "@nextcloud/vue-dashboard": "^0.1.8",
     "@nextcloud/axios": "^1.3.3",
     "@nextcloud/dialogs": "^1.4.0",
     "@nextcloud/moment": "^1.1.1",
