--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "@nextcloud/router": "^1.1.0",
     "@nextcloud/auth": "^1.3.0",
-    "@nextcloud/vue": "^3.1.1",
+    "@nextcloud/vue": "^3.1.2",
     "@nextcloud/vue-dashboard": "^1.0.1",
     "@nextcloud/axios": "^1.5.0",
     "@nextcloud/dialogs": "^3.0.0",
@@ -52,13 +52,14 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.1",
     "@nextcloud/browserslist-config": "^1.0.0",
-    "@nextcloud/eslint-config": "^2.2.0",
-    "@nextcloud/eslint-plugin": "^1.5.0",
-    "@nextcloud/webpack-vue-config": "^1.4.1",
+    "@nextcloud/eslint-config": "^3.0.0",
+    "@nextcloud/eslint-plugin": "^2.0.0",
+    "@nextcloud/webpack-vue-config": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "css-loader": "^5.0.0",
-    "eslint": "^7.12.1",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.13.0",
+    "eslint-webpack-plugin": "^2.1.0",
     "eslint-config-standard": "^16.0.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -67,18 +68,18 @@
     "eslint-plugin-standard": "^4.0.2",
     "eslint-plugin-vue": "^7.1.0",
     "file-loader": "^6.2.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.4",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.5",
     "stylelint": "^13.7.2",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-scss": "^3.18.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "url-loader": "^4.1.1",
     "style-loader": "^2.0.0",
-    "vue-loader": "^15.9.4",
+    "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.3.2",
-    "webpack-cli": "^4.1.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
     "webpack-node-externals": "^2.5.2"
   }
 }
