--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
 		"lint": "eslint --ext .js,.vue src",
 		"lint:fix": "eslint --ext .js,.vue src --fix",
-		"stylelint": "stylelint src",
-		"stylelint:fix": "stylelint src --fix"
+		"stylelint": "stylelint src/**/*.vue src/**/*.scss src/**/*.css",
+		"stylelint:fix": "stylelint src/**/*.vue src/**/*.scss src/**/*.css --fix"
 	},
 	"repository": {
 		"type": "git",
@@ -32,27 +32,30 @@
 		"extends @nextcloud/browserslist-config"
 	],
 	"engines": {
-		"node": "^14.0.0",
-		"npm": "^7.0.0"
+		"node": "^16.0.0",
+		"npm": "^7.0.0 || ^8.0.0"
 	},
 	"dependencies": {
 		"@babel/eslint-parser": "^7.13.10",
-		"@nextcloud/auth": "^1.3.0",
-		"@nextcloud/axios": "^1.6.0",
+		"@nextcloud/auth": "^2.0.0",
+		"@nextcloud/axios": "^2.0.0",
 		"@nextcloud/dialogs": "^3.1.1",
-		"@nextcloud/initial-state": "^1.2.0",
+		"@nextcloud/initial-state": "^2.0.0",
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "^4.2.0",
+		"@nextcloud/vue": "^5.4.0",
 		"@nextcloud/vue-dashboard": "^2.0.1",
-		"vue": "^2.6.11"
+		"vue": "^2.6.11",
+		"vue-material-design-icons": "^5.1.2"
 	},
 	"devDependencies": {
 		"@nextcloud/babel-config": "^1.0.0",
 		"@nextcloud/browserslist-config": "^2.2.0",
-		"@nextcloud/eslint-config": "^6.1.0",
-		"@nextcloud/stylelint-config": "^1.0.0-beta.0",
-		"@nextcloud/webpack-vue-config": "^4.1.0"
+		"@nextcloud/eslint-config": "^8.1.2",
+		"@nextcloud/stylelint-config": "^2.2.0",
+		"@nextcloud/webpack-vue-config": "^5.3.0",
+		"eslint-webpack-plugin": "^3.2.0",
+		"stylelint-webpack-plugin": "^3.3.0"
 	}
 }
