--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
 		"@nextcloud/auth": "^2.4.0",
 		"@nextcloud/axios": "^2.5.0",
 		"@nextcloud/dialogs": "^6.0.0",
-		"@nextcloud/initial-state": "^2.1.0",
+		"@nextcloud/initial-state": "^3.0.0",
 		"@nextcloud/l10n": "^3.1.0",
 		"@nextcloud/moment": "^1.3.1",
 		"@nextcloud/password-confirmation": "^5.1.1",
 		"@nextcloud/router": "^3.0.1",
 		"@nextcloud/vue": "^8.16.0",
 		"vue": "^2.6.11",
+		"vue-loader": "^15.11.1",
 		"vue-material-design-icons": "^5.3.0"
 	},
 	"devDependencies": {
