chore: configure psalm
Signed-off-by: Jana Peper <jana.peper@nextcloud.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
-js/
+/.idea/
+/*.iml
+
+/vendor/
+/vendor-bin/*/vendor/
+
+/.php-cs-fixer.cache
+/tests/.phpunit.cache
+
+/node_modules/
+/js/
+/css/
+
 .code-workspace
 .DS_Store
-.idea/
 .vscode/
 .vscode-upload.json
 .*.sw*
-node_modules
-
-/vendor/
+js/*hot-update.*
+build
+.php*.cache
