--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,51 @@
 {
     "name": "nextcloud/integration_mastodon",
     "type": "project",
-    "require": {
-        "html2text/html2text": "^4.3"
-    },
     "license": "AGPLv3",
     "authors": [
         {
             "name": "Julien Veyssier",
             "email": "julien-nc@posteo.net"
         }
-    ]
+    ],
+    "autoload": {
+		"psr-4": {
+			"OCA\\Mastodon\\": "lib/"
+		}
+	},
+    "scripts": {
+		"post-install-cmd": [
+			"@composer bin all install --ansi"
+		],
+		"post-update-cmd": [
+			"@composer bin all install --ansi"
+		],
+		"lint": "find . -name \\*.php -not -path './vendor/*' -not -path './vendor-bin/*' -not -path './build/*' -print0 | xargs -0 -n1 php -l",
+		"cs:check": "php-cs-fixer fix --dry-run --diff",
+		"cs:fix": "php-cs-fixer fix",
+		"psalm": "psalm --threads=1 --no-cache",
+		"test:unit": "phpunit tests -c tests/phpunit.xml --colors=always --fail-on-warning --fail-on-risky",
+		"openapi": "generate-spec",
+		"rector": "rector && composer cs:fix"
+	},
+    "require": {
+		"bamarni/composer-bin-plugin": "^1.8",
+		"php": "^8.1 || ^8.2 || ^8.3 || ^8.4",
+        "html2text/html2text": "^4.3"
+	},
+	"require-dev": {
+		"nextcloud/ocp": "dev-stable32",
+		"roave/security-advisories": "dev-latest",
+        "guzzlehttp/guzzle": "^7.8"
+	},
+    "config": {
+		"allow-plugins": {
+			"bamarni/composer-bin-plugin": true
+		},
+		"optimize-autoloader": true,
+		"sort-packages": true,
+		"platform": {
+			"php": "8.1"
+		}
+	}
 }
