--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@nextcloud/moment": "^1.3.1",
 		"@nextcloud/password-confirmation": "^5.1.1",
 		"@nextcloud/router": "^3.0.1",
+		"@nextcloud/sharing": "^0.3.0",
 		"@nextcloud/vue": "^8.16.0",
 		"vue": "^2.6.11",
 		"vue-loader": "^15.11.1",
