--- a/vendor-bin/psalm/composer.json
+++ b/vendor-bin/psalm/composer.json
@@ -1,10 +1,10 @@
 {
     "require-dev": {
-        "vimeo/psalm": "^5.23"
+        "vimeo/psalm": "6.x"
     },
-	"config": {
-		"platform": {
-			"php": "8.1"
-		}
-	}
+    "config": {
+        "platform": {
+          "php": "8.1.50012"
+        }
+    }
 }
